fix overflow image caption

--- a/themes/armno/static/css/style.css
+++ b/themes/armno/static/css/style.css
@@ -175,6 +175,11 @@ td,
 th {
     padding: 0
 }
+figcaption {
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 .hll {
     background-color: #ffc
 }
